--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ DerivedData
 *.ipa
 *.xcuserstate
 
+libbaiduNaviSDK.a
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
